[ENTESB-21304] Satisfy SMX saaj-impl requirements